################################################################################
################################################################################

    ____  _ ______            
   / __ \(_) ____/________  
  / /_/ / / / __/ ___/ __ \ 
 / ____/ / /_/ / /  / /_/ / 
/_/   /_/\____/_/   \____/ 


Guess who's back
Back again
PiGro's back
Tell a friend

Actually I wanted to wait until Bullseye came out but the update is ready. 
Why wait :-)


Changes:

-PDL integration

     PDL is a package manager that I developed. It shows you
     which APT packages are installed. You can search for packages and
     install / uninstall. You can find it when you click on SHOP.
     The old SHOP can be reached under MUST HAVES.

     PDL is super new and may still have a few teething problems. 
     Be a little indulgent ;-)

-Must Haves

    I removed all installers that no longer work.

-Design

    PiGro has always been about a cool look. I have continued tinkering and 
    will continue to work on getting the best out of tkinter. 
    It is important to me to write every line of code myself 
    and not to use any GUI generators :-)

    The font has changed to Helvetica

-Installer

    I have bound flatpaks in the FAST INSTALLER. 
    Don't forget that Flatpak and SNAP are not preinstalled.

-Poll

    Thanks for using the poll! You help me to improve PiGro. 
    I leave the votes open until January and then evaluate them.

Cheers

Timo
################################################################################
################################################################################