@@ -1,4 +1,4 @@
-!#bin/bash
+#!bin/bash
 
 wget -qO - https://download.sublimetext.com/sublimehq-pub.gpg | sudo apt-key add -
 
